@@ -9,32 +9,37 @@ import java.util.List;
 
 public class MiniMax {
 
-    public Tuple<Tuple<List<Cell>, String>, Double> miniMax(Tuple<List<Cell>, String> position, int depth,
-                                           boolean maximizingPlayer, double alpha, double beta) {
-        if (depth == 0 || gameOver(position)) {
-            return new Tuple<>(position, evaluatePosition(position, maximizingPlayer));
+    public static final int MIN_ROW = 0;
+    public static final int MAX_ROW = 7;
+    public static final int MIN_COL = 0;
+    public static final int MAX_COL = 3;
+
+    public Tuple<Tuple<List<Cell>, String>, Double> miniMax(Tuple<List<Cell>, String> board, int depth,
+                                                            boolean maximizingPlayer, double alpha, double beta) {
+        if (depth == 0 /*|| gameOver(board.getFirst())*/) {
+            return new Tuple<>(board, evaluateBoard(board.getFirst(), maximizingPlayer));
         }
 
         double eval = maximizingPlayer ? Double.MIN_VALUE : Double.MAX_VALUE;
 
-        List<Tuple<List<Cell>, String>> children = children(position, maximizingPlayer);
-        Tuple<List<Cell>, String> nextPosition = children.get(0);
+        List<Tuple<List<Cell>, String>> children = children(board.getFirst(), maximizingPlayer);
+        Tuple<List<Cell>, String> nextBoard = children.get(0);
 
         for (Tuple<List<Cell>, String> child : children) {
-            Tuple<Tuple<List<Cell>, String>, Double> positionEval =
+            Tuple<Tuple<List<Cell>, String>, Double> boardEval =
                     miniMax(child, depth - 1, !maximizingPlayer, alpha, beta);
-            double newEval = positionEval.getB();
+            double newEval = boardEval.getSecond();
 
             if (maximizingPlayer) {
                 if (newEval > eval) {
                     eval = newEval;
-                    nextPosition = child;
+                    nextBoard = child;
                     alpha = newEval;
                 }
             } else {
                 if (newEval < eval) {
                     eval = newEval;
-                    nextPosition = child;
+                    nextBoard = child;
                     beta = newEval;
                 }
             }
@@ -43,31 +48,32 @@ public class MiniMax {
                 break;
         }
 
-        return new Tuple<>(nextPosition, eval);
+        return new Tuple<>(nextBoard, eval);
     }
 
-    protected boolean gameOver(Tuple<List<Cell>, String> position) {
-        boolean hasRed = false;
-        boolean hasBlack = false;
-        for (Cell cell : position.getA()) {
-            if (cell.red())
-                hasRed = true;
-            else
-                hasBlack = true;
-        }
+    // TODO remove?
+//    private boolean gameOver(List<Cell> board) {
+//        boolean hasRed = false;
+//        boolean hasBlack = false;
+//        for (Cell cell : board) {
+//            if (cell.red())
+//                hasRed = true;
+//            else
+//                hasBlack = true;
+//        }
+//
+//        return !hasRed && !hasBlack;
+//    }
 
-        return !hasRed && !hasBlack;
-    }
-
-    protected List<Tuple<List<Cell>, String>> children(Tuple<List<Cell>, String> position, boolean red) {
+    private List<Tuple<List<Cell>, String>> children(List<Cell> board, boolean red) {
         List<Tuple<List<Cell>, String>> children = new LinkedList<>();
         boolean capture = false;
 
-        Boolean[] board = new Boolean[32];
-        for (Cell cell : position.getA())
-            board[cell.getPosition()] = cell.red();
+        Boolean[] auxBoard = new Boolean[32]; // True - RED, False - Black, Null - Empty
+        for (Cell cell : board)
+            auxBoard[cell.getPosition()] = cell.red();
 
-        for (Cell cell : position.getA()) {
+        for (Cell cell : board) {
             int row = cell.getRow();
             int col = cell.getColumn();
             int pos = cell.getPosition();
@@ -77,80 +83,56 @@ public class MiniMax {
                 if (cell.isKing()) {
                     // TODO king's movement
                 } else {
-                    if (row < 6 && col > 1) {
-                        int topRight = getTopRight(pos, rowEven);
-                        int topTopRight = getTopRight(topRight, !rowEven);
-                        if (isBlack(topRight, board) && isEmpty(topTopRight, board)) {
-                            if (!capture) {
-                                children.clear();
-                                capture = true;
-                            }
-                            children.add(capture(position, pos, topRight, topTopRight, true));
-                        }
+                    if (row < MAX_ROW - 1 && col > MIN_COL) {
+                        int topRight = getTopRightPosition(pos, rowEven);
+                        int topTopRight = getTopRightPosition(topRight, !rowEven);
+                        capture = maybeCapture(board, children, auxBoard, capture, pos, topRight, topTopRight, true);
                     }
 
-                    if (row < 6 && col < 6) {
-                        int bottomRight = getBottomRight(pos, rowEven);
-                        int bottomBottomRight = getBottomRight(bottomRight, !rowEven);
-                        if (isBlack(bottomRight, board) && isEmpty(bottomBottomRight, board)) {
-                            if (!capture) {
-                                children.clear();
-                                capture = true;
-                            }
-                            children.add(capture(position, pos, bottomRight, bottomBottomRight, true));
-                        }
+                    if (row < MAX_ROW - 1 && col < MAX_COL) {
+                        int bottomRight = getBottomRightPosition(pos, rowEven);
+                        int bottomBottomRight = getBottomRightPosition(bottomRight, !rowEven);
+                        capture = maybeCapture(board, children, auxBoard, capture, pos, bottomRight, bottomBottomRight, true);
                     }
 
                     if (!capture) {
-                        if (col != 0) {
-                            int topRight = getTopRight(pos, rowEven);
-                            if (isEmpty(topRight, board))
-                                children.add(move(position, pos, topRight, true));
+                        if (col != MIN_COL && rowEven) {
+                            int topRight = getTopRightPosition(pos, rowEven);
+                            if (isEmpty(topRight, auxBoard))
+                                children.add(move(board, pos, topRight, true));
                         }
 
-                        if (col != 7) {
-                            int bottomRight = getBottomRight(pos, rowEven);
-                            if (isEmpty(bottomRight, board))
-                                children.add(move(position, pos, bottomRight, true));
+                        if (col != MAX_COL && !rowEven) {
+                            int bottomRight = getBottomRightPosition(pos, rowEven);
+                            if (isEmpty(bottomRight, auxBoard))
+                                children.add(move(board, pos, bottomRight, true));
                         }
                     }
                 }
             } else if (!cell.red() && !red) {
-                if (row > 1 && col > 1) {
-                    int topLeft = getTopLeft(pos, rowEven);
-                    int topTopLeft = getTopLeft(topLeft, !rowEven);
-                    if (isRed(topLeft, board) && isEmpty(topTopLeft, board)) {
-                        if (!capture) {
-                            children.clear();
-                            capture = true;
-                        }
-                        children.add(capture(position, pos, topLeft, topTopLeft, false));
-                    }
+                if (row > MIN_ROW + 1 && col > MIN_COL) {
+                    int topLeft = getTopLeftPosition(pos, rowEven);
+                    int topTopLeft = getTopLeftPosition(topLeft, !rowEven);
+                    capture = maybeCapture(board, children, auxBoard, capture, pos, topLeft, topTopLeft, false);
                 }
 
-                if (row > 1 && col < 6) {
-                    int bottomLeft = getBottomLeft(pos, rowEven);
-                    int bottomBottomLeft = getBottomLeft(bottomLeft, !rowEven);
-                    if (isRed(bottomLeft, board) && isEmpty(bottomBottomLeft, board)) {
-                        if (!capture) {
-                            children.clear();
-                            capture = true;
-                        }
-                        children.add(capture(position, pos, bottomLeft, bottomBottomLeft, false));
-                    }
+                if (row > MIN_ROW + 1 && col < MAX_COL) {
+                    int bottomLeft = getBottomLeftPosition(pos, rowEven);
+                    int bottomBottomLeft = getBottomLeftPosition(bottomLeft, !rowEven);
+                    capture = maybeCapture(board, children, auxBoard, capture, pos, bottomLeft, bottomBottomLeft, false);
                 }
 
                 if (!capture) {
-                    if (col != 0) {
-                        int topLeft = getTopLeft(pos, rowEven);
-                        if (isEmpty(topLeft, board))
-                            children.add(move(position, pos, topLeft, false));
+                    if (col != MIN_COL && !rowEven) {
+                        int topLeft = getTopLeftPosition(pos, rowEven);
+                        if (isEmpty(topLeft, auxBoard))
+                            children.add(move(board, pos, topLeft, false));
                     }
 
-                    if (col != 7) {
-                        int bottomLeft = getBottomLeft(pos, rowEven);
-                        if (isEmpty(bottomLeft, board))
-                            children.add(move(position, pos, bottomLeft, false));
+                    if (col != MAX_COL && rowEven) {
+                        int bottomLeft = getBottomLeftPosition(pos, rowEven);
+                        if (isEmpty(bottomLeft, auxBoard))
+                            children.add(move(board, pos, bottomLeft, false));
                     }
                 }
             }
@@ -159,10 +141,24 @@ public class MiniMax {
         return children;
     }
 
-    protected double evaluatePosition(Tuple<List<Cell>, String> position, boolean red) {
+    private boolean maybeCapture(List<Cell> board, List<Tuple<List<Cell>, String>> children, Boolean[] auxBoard,
+                                 boolean capture, int pos, int captured, int newPos, boolean red) {
+        boolean cond = red ? isRed(pos, auxBoard) : isBlack(pos, auxBoard);
+        if (cond && isEmpty(newPos, auxBoard)) {
+            if (!capture) {
+                children.clear();
+                capture = true;
+            }
+            children.add(capture(board, pos, captured, newPos, red));
+        }
+        return capture;
+    }
+
+    // red left - black left + 0.5 * (red kings - black kings)
+    private double evaluateBoard(List<Cell> board, boolean red) {
         double score = 0;
 
-        for (Cell cell : position.getA()) {
+        for (Cell cell : board) {
             if (cell.red())
                 score += cell.isKing() ? 4 : 1;
             else
@@ -174,15 +170,15 @@ public class MiniMax {
         return score;
     }
 
-    private Tuple<List<Cell>, String> capture(Tuple<List<Cell>, String> position,
-                                           int prev, int captured, int next, boolean red) {
-        Tuple<List<Cell>, String> move = move(position, prev, next, red);
+    private Tuple<List<Cell>, String> capture(List<Cell> board,
+                                              int prevPos, int capturedPos, int nextPos, boolean red) {
+        Tuple<List<Cell>, String> move = move(board, prevPos, nextPos, red);
 
-        List<Cell> newPosition = move.getA();
+        List<Cell> newBoard = move.getFirst();
         int i = 0;
-        for (Cell cell : newPosition) {
-            if (cell.getPosition() == captured) {
-                newPosition.remove(i);
+        for (Cell cell : newBoard) {
+            if (cell.getPosition() == capturedPos) {
+                newBoard.remove(i);
                 break;
             }
             ++i;
@@ -191,40 +187,41 @@ public class MiniMax {
         return move;
     }
 
-    private Tuple<List<Cell>, String> move(Tuple<List<Cell>, String> position,
-                                           int prev, int next, boolean red) {
-        int newRow = next / 4 - 1;
-        int newCol = next % 4 - 1;
+    // TODO optimize (HashMap<Position, Cell>?)
+    private Tuple<List<Cell>, String> move(List<Cell> board,
+                                           int prevPos, int nextPos, boolean red) {
+        int newRow = nextPos / 4 - 1;
+        int newCol = nextPos % 4 - 1;
         Cell newCell = new Cell(red ? PlayerColor.RED : PlayerColor.BLACK,
-                newRow, newCol, newRow == 0 || newRow == 7, next);
+                newRow, newCol, newRow == 0 || newRow == 7, nextPos);
 
-        List<Cell> newPosition = new LinkedList<>(position.getA());
+        List<Cell> newBoard = new LinkedList<>(board);
         int i = 0;
-        for (Cell cell : position.getA()) {
-            if (cell.getPosition() == prev) {
-                newPosition.remove(i);
-                newPosition.add(i, newCell);
+        for (Cell cell : board) {
+            if (cell.getPosition() == prevPos) {
+                newBoard.remove(i);
+                newBoard.add(i, newCell);
                 break;
             }
             ++i;
         }
 
-        return new Tuple<>(newPosition, "[" + prev + "," + next + "]");
+        return new Tuple<>(newBoard, "[" + prevPos + "," + nextPos + "]");
     }
 
-    private int getTopLeft(int position, boolean rowEven) {
+    private int getTopLeftPosition(int position, boolean rowEven) {
         return rowEven ? position - 4 : position - 5;
     }
 
-    private int getBottomLeft(int position, boolean rowEven) {
+    private int getBottomLeftPosition(int position, boolean rowEven) {
         return rowEven ? position - 3 : position - 4;
     }
 
-    private int getTopRight(int position, boolean rowEven) {
+    private int getTopRightPosition(int position, boolean rowEven) {
         return rowEven ? position + 4 : position + 3;
     }
 
-    private int getBottomRight(int position, boolean rowEven) {
+    private int getBottomRightPosition(int position, boolean rowEven) {
         return rowEven ? position + 5 : position + 4;
     }
 
